// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownButton component testing not splited disable 1`] = `
<DocumentFragment>
  <div
    class="sc-jSMfEi gYWzPj"
    data-floating-ui-inert=""
    role="button"
  >
    <button
      class="sc-gsnTZi sc-hKMtZM bveZbV ijtWnk sc-ftvSup gkDJIQ"
      color="primary"
      data-testid="menu-toggle"
      disabled=""
      font-size="13px"
      height="32px"
    >
      <div
        class="sc-dkzDqf iVkTgt"
      >
        Save
        <div
          class="sc-eCYdqJ bTpvvU"
        />
        <span
          class="sc-papXJ hnQhun"
          size="18"
        >
          <svg
            viewBox="0 0 20 20"
          >
            <path
              d="m10 10.9 4.1-4.1 1.2 1.1-5.3 5.3L4.7 8l1.2-1.1z"
              fill="#B3BAC1"
            />
          </svg>
        </span>
      </div>
    </button>
  </div>
  <div
    class="sc-hAZoDl kEqqFR"
  >
    <div
      class="sc-ksZaOG jOgoQd"
      id=":r2:"
      role="dialog"
      style="position: absolute; top: 0px; left: 0px;"
      tabindex="-1"
    >
      <div
        class="sc-jqUVSM cXIrrx"
      >
        <hr
          class="sc-breuTD dyIFMd"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-evZas VBArT"
        >
          <p
            class="sc-bczRLJ dkTFVi sc-crXcEl"
            color="#041C33"
            font-size="13px"
          >
            Save
          </p>
        </div>
        <div
          class="sc-evZas VBArT"
        >
          <p
            class="sc-bczRLJ dkTFVi sc-crXcEl"
            color="#041C33"
            font-size="13px"
          >
            Save and execute
          </p>
        </div>
        <hr
          class="sc-breuTD dyIFMd"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-evZas VBArT"
        >
          <p
            class="sc-bczRLJ dkTFVi sc-crXcEl"
            color="#041C33"
            font-size="13px"
          >
            Save as draft
          </p>
        </div>
        <div
          class="sc-evZas VBArT"
        >
          <p
            class="sc-bczRLJ dkTFVi sc-crXcEl"
            color="#041C33"
            font-size="13px"
          >
            Cancel
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropdownButton component testing not splited enable 1`] = `
<DocumentFragment>
  <div
    class="sc-jSMfEi gYWzPj"
    data-floating-ui-inert=""
    role="button"
  >
    <button
      class="sc-gsnTZi sc-hKMtZM bveZbV ijtWnk sc-ftvSup gkDJIQ"
      color="primary"
      data-testid="menu-toggle"
      font-size="13px"
      height="32px"
    >
      <div
        class="sc-dkzDqf iVkTgt"
      >
        Save
        <div
          class="sc-eCYdqJ bTpvvU"
        />
        <span
          class="sc-papXJ hnQhun"
          size="18"
        >
          <svg
            viewBox="0 0 20 20"
          >
            <path
              d="m10 10.9 4.1-4.1 1.2 1.1-5.3 5.3L4.7 8l1.2-1.1z"
              fill="#FFFFFF"
            />
          </svg>
        </span>
      </div>
    </button>
  </div>
  <div
    class="sc-hAZoDl kBjZER"
  >
    <div
      class="sc-fEOsli dhkeLw fade-transition-enter fade-transition-enter-active"
    >
      <div
        class="sc-fnykZs hlXMmv"
      />
    </div>
    <div
      class="sc-ksZaOG jOgoQd"
      id=":r0:"
      role="dialog"
      style="position: absolute; top: 0px; left: 0px;"
      tabindex="-1"
    >
      <div
        class="sc-jqUVSM cXIrrx"
      >
        <hr
          class="sc-breuTD dyIFMd"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-evZas VBArT"
        >
          <p
            class="sc-bczRLJ dkTFVi sc-crXcEl"
            color="#041C33"
            font-size="13px"
          >
            Save
          </p>
        </div>
        <div
          class="sc-evZas VBArT"
        >
          <p
            class="sc-bczRLJ dkTFVi sc-crXcEl"
            color="#041C33"
            font-size="13px"
          >
            Save and execute
          </p>
        </div>
        <hr
          class="sc-breuTD dyIFMd"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-evZas VBArT"
        >
          <p
            class="sc-bczRLJ dkTFVi sc-crXcEl"
            color="#041C33"
            font-size="13px"
          >
            Save as draft
          </p>
        </div>
        <div
          class="sc-evZas VBArT"
        >
          <p
            class="sc-bczRLJ dkTFVi sc-crXcEl"
            color="#041C33"
            font-size="13px"
          >
            Cancel
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropdownButton component testing splited disable 1`] = `
<DocumentFragment>
  <div
    class="sc-jSMfEi gYWzPj"
    data-floating-ui-inert=""
    role="button"
  >
    <button
      class="sc-gsnTZi sc-hKMtZM bveZbV bGQOuX sc-gKXOVf dWiioM"
      color="primary"
      disabled=""
      font-size="13px"
      height="32px"
    >
      <div
        class="sc-dkzDqf iVkTgt"
      >
        Save
      </div>
    </button>
    <button
      class="sc-gsnTZi sc-hKMtZM bveZbV bGQOuX sc-iBkjds hCeBTq"
      color="primary"
      data-testid="menu-toggle"
      disabled=""
      font-size="13px"
      height="32px"
    >
      <div
        class="sc-dkzDqf iVkTgt"
      >
        <span
          class="sc-papXJ hnQhun"
          size="18"
        >
          <svg
            viewBox="0 0 20 20"
          >
            <path
              d="m10 10.9 4.1-4.1 1.2 1.1-5.3 5.3L4.7 8l1.2-1.1z"
              fill="#B3BAC1"
            />
          </svg>
        </span>
      </div>
    </button>
  </div>
  <div
    class="sc-hAZoDl kEqqFR"
  >
    <div
      class="sc-ksZaOG jOgoQd"
      id=":r6:"
      role="dialog"
      style="position: absolute; top: 0px; left: 0px;"
      tabindex="-1"
    >
      <div
        class="sc-jqUVSM cXIrrx"
      >
        <hr
          class="sc-breuTD dyIFMd"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-evZas VBArT"
        >
          <p
            class="sc-bczRLJ dkTFVi sc-crXcEl"
            color="#041C33"
            font-size="13px"
          >
            Save
          </p>
        </div>
        <div
          class="sc-evZas VBArT"
        >
          <p
            class="sc-bczRLJ dkTFVi sc-crXcEl"
            color="#041C33"
            font-size="13px"
          >
            Save and execute
          </p>
        </div>
        <hr
          class="sc-breuTD dyIFMd"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-evZas VBArT"
        >
          <p
            class="sc-bczRLJ dkTFVi sc-crXcEl"
            color="#041C33"
            font-size="13px"
          >
            Save as draft
          </p>
        </div>
        <div
          class="sc-evZas VBArT"
        >
          <p
            class="sc-bczRLJ dkTFVi sc-crXcEl"
            color="#041C33"
            font-size="13px"
          >
            Cancel
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropdownButton component testing splited enable 1`] = `
<DocumentFragment>
  <div
    class="sc-jSMfEi gYWzPj"
    data-floating-ui-inert=""
    role="button"
  >
    <button
      class="sc-gsnTZi sc-hKMtZM bveZbV bGQOuX sc-gKXOVf dWiioM"
      color="primary"
      font-size="13px"
      height="32px"
    >
      <div
        class="sc-dkzDqf iVkTgt"
      >
        Save
      </div>
    </button>
    <button
      class="sc-gsnTZi sc-hKMtZM bveZbV bGQOuX sc-iBkjds hCeBTq"
      color="primary"
      data-testid="menu-toggle"
      font-size="13px"
      height="32px"
    >
      <div
        class="sc-dkzDqf iVkTgt"
      >
        <span
          class="sc-papXJ hnQhun"
          size="18"
        >
          <svg
            viewBox="0 0 20 20"
          >
            <path
              d="m10 10.9 4.1-4.1 1.2 1.1-5.3 5.3L4.7 8l1.2-1.1z"
              fill="#FFFFFF"
            />
          </svg>
        </span>
      </div>
    </button>
  </div>
  <div
    class="sc-hAZoDl kBjZER"
  >
    <div
      class="sc-fEOsli dhkeLw fade-transition-enter fade-transition-enter-active"
    >
      <div
        class="sc-fnykZs hlXMmv"
      />
    </div>
    <div
      class="sc-ksZaOG jOgoQd"
      id=":r4:"
      role="dialog"
      style="position: absolute; top: 0px; left: 0px;"
      tabindex="-1"
    >
      <div
        class="sc-jqUVSM cXIrrx"
      >
        <hr
          class="sc-breuTD dyIFMd"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-evZas VBArT"
        >
          <p
            class="sc-bczRLJ dkTFVi sc-crXcEl"
            color="#041C33"
            font-size="13px"
          >
            Save
          </p>
        </div>
        <div
          class="sc-evZas VBArT"
        >
          <p
            class="sc-bczRLJ dkTFVi sc-crXcEl"
            color="#041C33"
            font-size="13px"
          >
            Save and execute
          </p>
        </div>
        <hr
          class="sc-breuTD dyIFMd"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-evZas VBArT"
        >
          <p
            class="sc-bczRLJ dkTFVi sc-crXcEl"
            color="#041C33"
            font-size="13px"
          >
            Save as draft
          </p>
        </div>
        <div
          class="sc-evZas VBArT"
        >
          <p
            class="sc-bczRLJ dkTFVi sc-crXcEl"
            color="#041C33"
            font-size="13px"
          >
            Cancel
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
